исходный вариант третьей домашней работы
