# swagger.json
@@ -1,218 +1,286 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "description": "This is a training block chain explorer",
-    "version": "1.0.1",
-    "title": "Blockchain explorer"
+ "swagger": "2.0",
+ "info": {
+  "description": "This is a training block chain explorer",
+  "version": "1.0.1",
+  "title": "Blockchain explorer"
+ },
+ "tags": [
+  {
+   "name": "wallet",
+   "description": "Everything about your wallet"
   },
-  "tags": [
-    {
-      "name": "wallet",
-      "description": "Everything about your wallet"
-    },
-    {
-      "name": "user",
-      "description": "Authentication stuff"
-    }
-  ],
-  "schemes": [
-    "http"
-  ],
-  "paths": {
-    "/signup": {
-      "post": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Sign up a new user",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Wallet object that needs to be added to the database",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/SignRequest"
-            }
-          }
-        ],
-        "security": [],
-        "responses": {
-          "201": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          },
-          "400": {
-            "description": "Error format"
-          }
-        }
-      }
-    },
-    "/signin": {
-      "post": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Signs in and returns the authentication cookie",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Wallet object that needs to be added to the database",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/SignRequest"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully authenticated. The email is returned in a cookie named `AIOHTTP_SESSION`. You need to include this cookie in subsequent requests.\n",
-            "headers": {
-              "X-Set-Cookie": {
-                "type": "string",
-                "format": "cookie",
-                "description": "cookie which contains email signed in user"
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid username/password supplied"
-          }
-        },
-        "security": []
-      }
-    },
-    "/wallets": {
-      "get": {
-        "tags": [
-          "wallet"
-        ],
-        "summary": "Returns all user's wallets",
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Wallet"
-              }
-            }
-          },
-          "401": {
-            "description": "Invalid ID supplied"
-          }
-        },
-        "security": [
-          {
-            "api_key": []
-          }
-        ]
-      },
-      "post": {
-        "tags": [
-          "wallet"
-        ],
-        "summary": "Add a new wallet",
-        "description": "",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Wallet object that needs to be added to the database",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Wallet"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Wallet"
-            }
-          },
-          "400": {
-            "description": "Invalid format"
-          }
-        },
-        "security": [
-          {
-            "api_key": []
-          }
-        ]
-      }
-    }
+  {
+   "name": "user",
+   "description": "Authentication stuff"
   },
-  "securityDefinitions": {
-    "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
-      "in": "header"
-    }
-  },
-  "definitions": {
-    "Wallet": {
-      "type": "object",
-      "required": [
-        "address"
-      ],
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "uuid"
-        },
-        "address": {
-          "type": "string",
-          "example": "mvc8Za9A91V6m5EtCbEsN29ij9FU2bL3yj"
-        }
-      }
-    },
-    "User": {
-      "type": "object",
-      "required": [
-        "email",
-        "password"
-      ],
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "uuid"
-        },
-        "email": {
-          "type": "string",
-          "format": "email"
-        },
-        "password": {
-          "type": "string",
-          "format": "password"
-        }
-      }
-    },
-    "SignRequest": {
-      "type": "object",
-      "required": [
-        "email",
-        "password"
-      ],
-      "properties": {
-        "email": {
-          "type": "string",
-          "format": "email"
-        },
-        "password": {
-          "type": "string",
-          "format": "password"
-        }
-      }
-    }
+  {
+   "name": "balance",
+   "description": "Difference between your incomes and outcomes"
   }
+ ],
+ "schemes": [
+  "http"
+ ],
+ "paths": {
+  "/signup": {
+   "post": {
+    "tags": [
+     "user"
+    ],
+    "summary": "Sign up a new user",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "description": "Wallet object that needs to be added to the database",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/SignRequest"
+      }
+     }
+    ],
+    "security": [],
+    "responses": {
+     "201": {
+      "description": "successful operation",
+      "schema": {
+       "$ref": "#/definitions/User"
+      }
+     },
+     "400": {
+      "description": "Error format"
+     }
+    }
+   }
+  },
+  "/signin": {
+   "post": {
+    "tags": [
+     "user"
+    ],
+    "summary": "Signs in and returns the authentication cookie",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "description": "Wallet object that needs to be added to the database",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/SignRequest"
+      }
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "Successfully authenticated. The email is returned in a cookie named `AIOHTTP_SESSION`. You need to include this cookie in subsequent requests.\n",
+      "headers": {
+       "X-Set-Cookie": {
+        "type": "string",
+        "format": "cookie",
+        "description": "cookie which contains email signed in user"
+       }
+      }
+     },
+     "400": {
+      "description": "Invalid username/password supplied"
+     }
+    },
+    "security": []
+   }
+  },
+  "/wallets": {
+   "get": {
+    "tags": [
+     "wallet"
+    ],
+    "summary": "Returns all user's wallets",
+    "description": "",
+    "produces": [
+     "application/json"
+    ],
+    "parameters": [],
+    "responses": {
+     "200": {
+      "description": "successful operation",
+      "schema": {
+       "type": "array",
+       "items": {
+        "$ref": "#/definitions/Wallet"
+       }
+      }
+     },
+     "401": {
+      "description": "Invalid ID supplied"
+     }
+    },
+    "security": [
+     {
+      "api_key": []
+     }
+    ]
+   },
+   "post": {
+    "tags": [
+     "wallet"
+    ],
+    "summary": "Add a new wallet",
+    "description": "",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "description": "Wallet object that needs to be added to the database",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/Wallet"
+      }
+     }
+    ],
+    "responses": {
+     "201": {
+      "description": "successful operation",
+      "schema": {
+       "$ref": "#/definitions/Wallet"
+      }
+     },
+     "400": {
+      "description": "Invalid format"
+     }
+    },
+    "security": [
+     {
+      "api_key": []
+     }
+    ]
+   }
+  },
+  "/generate": {
+   "post": {
+    "tags": [
+     "balance"
+    ],
+    "summary": "Generate coin base blocks for definite address",
+    "description": "",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "description": "Wallet whose address that blocks need to be generated for",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/Wallet"
+      }
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "successful operation",
+      "schema": {
+       "$ref": "#/definitions/Wallet"
+      }
+     },
+     "400": {
+      "description": "Invalid format"
+     }
+    },
+    "security": []
+   }
+  },
+  "/balance": {
+   "post": {
+    "tags": [
+     "balance"
+    ],
+    "summary": "Calculate balance for definite address",
+    "description": "",
+    "parameters": [
+     {
+      "in": "body",
+      "name": "body",
+      "description": "Wallet whose address that balance need to be calculated",
+      "required": true,
+      "schema": {
+       "$ref": "#/definitions/Wallet"
+      }
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "successful operation",
+      "schema": {
+       "$ref": "#/definitions/Wallet"
+      }
+     },
+     "400": {
+      "description": "Invalid format"
+     }
+    },
+    "security": []
+   }
+  }
+ },
+ "securityDefinitions": {
+  "api_key": {
+   "type": "apiKey",
+   "name": "api_key",
+   "in": "header"
+  }
+ },
+ "definitions": {
+  "Wallet": {
+   "type": "object",
+   "required": [
+    "address"
+   ],
+   "properties": {
+    "id": {
+     "type": "string",
+     "format": "uuid"
+    },
+    "address": {
+     "type": "string",
+     "example": "mvc8Za9A91V6m5EtCbEsN29ij9FU2bL3yj"
+    }
+   }
+  },
+  "User": {
+   "type": "object",
+   "required": [
+    "email",
+    "password"
+   ],
+   "properties": {
+    "id": {
+     "type": "string",
+     "format": "uuid"
+    },
+    "email": {
+     "type": "string",
+     "format": "email"
+    },
+    "password": {
+     "type": "string",
+     "format": "password"
+    }
+   }
+  },
+  "SignRequest": {
+   "type": "object",
+   "required": [
+    "email",
+    "password"
+   ],
+   "properties": {
+    "email": {
+     "type": "string",
+     "format": "email"
+    },
+    "password": {
+     "type": "string",
+     "format": "password"
+    }
+   }
+  }
+ }
 }
